move word spacing out of fix stylesheet

--- a/assets/sass/_fix.scss
+++ b/assets/sass/_fix.scss
@@ -21,13 +21,9 @@ header {
     span {
         vertical-align: bottom;
         position: relative;
-        top: 8px;
-        left: -3px;
-        font-size: 33px;
+        top: 6px;
+        left: -2px;
     }
-}
-.lni-menu {
-    transform: scaleX(0.75);
 }
 #pp-nav{
     li{
@@ -140,8 +136,8 @@ header {
             height: 40px;
         }
         span {
-            font-size: 45px;
-            top: 14px;
+            font-size: 32px;
+            top: 8px;
             left: -4px;
         }
     }
